page individuelle product

--- a/codi/assets/main.css
+++ b/codi/assets/main.css
@@ -1,6 +1,6 @@
-.el{
-    box-shadow: 0px 4px 10px rgba(0,0,0,0.1) !important;
+.el {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1) !important;
 }
-.pointer{
-    cursor:pointer;
+.pointer {
+  cursor: pointer;
 }
